banner part done

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
        </style>
 </head>
 <body class="manrope">
-    <!-- header -->
+    <!-- HEADER STARTS -->
      <header class="md:container md:mx-auto m-3 bg-sky-50">
-        <!-- NAVBAR -->
+        <!-- NAVBAR STARTS-->
         <nav>
             <div class="navbar">
                 <div class="navbar-start">
@@ -85,10 +85,26 @@
                 </div>
             </div>
         </nav>
+        <!-- NAVBAR ENDS -->
+         <!-- BANNER STARTS -->
+          <section class="lg:flex flex-col items-center">
+            <!-- IMAGE -->
+             <div>
+                <img src="assets/images/banner.png" alt="">
+             </div>
+             <!-- TEXT -->
+              <div>
+                <h1 class="text-center lg:text-[64px] text-[18px] font-bold">A barn house of this design has a <br> striking appearance</h1>
+                <p class="text-center font-semibold text-[10px]">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, <br> and large windows that flood the space with natural light.</p>
+              </div>
+          </section>
+          <!-- BANNER ENDS -->
      </header>
-     <!-- main -->
+     <!-- MAIN STARTS -->
       <main></main>
-      <!-- footer -->
+      <!-- MAIN ENDS -->
+      <!-- FOOTER STARTS -->
        <footer> </footer>
+       <!-- FOOTER ENDS -->
 </body>
 </html>
