button added in banner section

--- a/index.html
+++ b/index.html
@@ -95,8 +95,12 @@
              <!-- TEXT -->
               <div>
                 <h1 class="text-center lg:text-[64px] text-[18px] font-bold">A barn house of this design has a <br> striking appearance</h1>
-                <p class="text-center font-semibold text-[10px]">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, <br> and large windows that flood the space with natural light.</p>
+                <p class="text-center font-semibold text-[10px]">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents,<br>and large windows that flood the space with natural light.</p>
               </div>
+              <div class="flex justify-center">
+                <button class="btn bg-color arrow-btn border-2 border-lime-400 lg:mt-[32px] lg:mb-[120px] mt-2 mb-5">View Details <i  class="fa-solid fa-arrow-right -rotate-45 arrow-btn p-2 bg-lime-600 opacity-60 text-arrow-color arrow-btn "></i>
+              </div>
+              </button>
           </section>
           <!-- BANNER ENDS -->
      </header>
