WE DESIGN part done

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
               colors: {
                 clifford:'#da373d',
                 'arrow-color':'rgb(171, 239, 95)',
+                'deep-sky-color':'rgb(30, 30, 30)',
               }
             }
           }
@@ -41,7 +42,7 @@
 </head>
 <body class="manrope">
     <!-- HEADER STARTS -->
-     <header class="md:container md:mx-auto m-3 bg-sky-50">
+     <header class="md:container md:mx-auto m-3">
         <!-- NAVBAR STARTS-->
         <nav>
             <div class="navbar">
@@ -98,14 +99,62 @@
                 <p class="text-center font-semibold text-[10px]">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents,<br>and large windows that flood the space with natural light.</p>
               </div>
               <div class="flex justify-center">
-                <button class="btn bg-color arrow-btn border-2 border-lime-400 lg:mt-[32px] lg:mb-[120px] mt-2 mb-5">View Details <i  class="fa-solid fa-arrow-right -rotate-45 arrow-btn p-2 bg-lime-600 opacity-60 text-arrow-color arrow-btn "></i>
+                <button class="btn bg-color arrow-btn border-2 border-lime-400 lg:mt-[32px] lg:mb-[120px] mt-2 mb-5">View Details <i  class="fa-solid fa-arrow-right -rotate-45 arrow-btn p-2 bg-lime-600 opacity-60 text-arrow-color"></i>
+                </button>
               </div>
-              </button>
           </section>
           <!-- BANNER ENDS -->
      </header>
      <!-- MAIN STARTS -->
-      <main></main>
+      <main>
+         <!-- WE DESIGN -->
+          <div>
+            <div class="hero bg-base-200">
+                <div class="hero-content flex-col justify-center flex-col-reverse lg:flex-row-reverse">
+                    <!-- IMAGE -->
+                    <img
+                      src="assets/images/Rectangle.png" />
+                      <!-- CARD -->
+                    <div>
+                        <div class="lg:flex hidden mb-3 -ml-20">
+                            <img src="assets/images/Vector.png" alt="">
+                        </div>
+                        <div class="flex justify-center lg:justify-start mb-4">
+                            <button class="btn arrow-btn bg-white"> <i  class="fa-solid fa-arrow-right"></i>About Us
+                            </button>
+                        </div>
+                        <div class="flex flex-col justify-center">
+                                <h1 class="text-5xl font-bold">We design thoughtful, liveable spaces</h1>
+                                <p class="py-6">The barn house captivates with its blend of rustic charm and sleek metal accents.</p>
+                                <!-- CARD CONTENT -->
+                                <div class="card card-side bg-base-100">
+                                    <figure class="p-3">
+                                    <img
+                                        src="assets/images/commercial.png"
+                                        alt="Movie" />
+                                    </figure>
+                                    <div class="card-body">
+                                    <h2 class="card-title">Commercial</h2>
+                                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                                    </div>
+                                </div>
+                                <div class="mt-5 card card-side bg-base-100">
+                                    <figure class="p-3">
+                                    <img
+                                        src="assets/images/residential.png"
+                                        alt="Movie" />
+                                    </figure>
+                                    <div class="card-body">
+                                    <h2 class="card-title">Residential</h2>
+                                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+              </div>
+          </div>
+      </main>
       <!-- MAIN ENDS -->
       <!-- FOOTER STARTS -->
        <footer> </footer>
