work progress part done

--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
         .arrow-btn{
             border-radius: 32px;
         }
+        .lavender{
+            background-color: #E7C1D3;
+        }
+        .yellow{
+            background-color: #EFDA6E;
+        }
+        .pastel{
+            background-color: #A4DAC3;
+        }
+        .blue{
+            background-color: #77AAEA;
+        }
        </style>
 </head>
 <body class="manrope">
@@ -95,7 +107,7 @@
              </div>
              <!-- TEXT -->
               <div>
-                <h1 class="text-center lg:text-[64px] text-[18px] font-bold">A barn house of this design has a <br> striking appearance</h1>
+                <h1 class="text-center lg:text-[64px] text-[18px] font-extrabold">A barn house of this design has a <br> striking appearance</h1>
                 <p class="text-center font-semibold text-[10px]">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents,<br>and large windows that flood the space with natural light.</p>
               </div>
               <div class="flex justify-center">
@@ -107,10 +119,10 @@
      </header>
      <!-- MAIN STARTS -->
       <main>
-         <!-- WE DESIGN -->
-          <div>
+        <!-- WE DESIGN -->
+        <div>
             <div class="hero bg-base-200">
-                <div class="hero-content flex-col justify-center flex-col-reverse lg:flex-row-reverse">
+                <div class="hero-content justify-center flex-col-reverse lg:flex-row-reverse">
                     <!-- IMAGE -->
                     <img
                       src="assets/images/Rectangle.png" />
@@ -153,7 +165,49 @@
                     </div>
                 </div>
               </div>
-          </div>
+        </div>
+        <!-- WORK PROGRESS -->
+        <section class="my-24">
+            <!-- title -->
+             <div class="text-center mb-8">
+                <button class="btn arrow-btn bg-white"> <i  class="fa-solid fa-arrow-right"></i>How we works
+                </button>
+                <h1 class="mb-5 text-3xl mb:text-4xl font-bold">How we works</h1>
+                <p>The barn house captivates with its blend of rustic charm and modern sophistication,<br> featuring weathered wood, sleek metal accents.</p>
+             </div>
+             <!-- grid card -->
+              <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 m-2">
+                <!-- product card -->
+                 <div class="card lavender m-6 lg:w-64 lg:m-24">
+                    <img class="pt-4 w-16 pl-4" src="assets/images/concept.png" alt="">
+                    <div class="card-body">
+                        <h1 class="font-extrabold text-xl">Concept</h1>
+                        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+                 </div>
+                 <div class="card yellow lg:w-64 m-6 lg:m-24">
+                    <img class="pt-4 w-16 pl-4" src="assets/images/flow-chart.png" alt="">
+                    <div class="card-body">
+                        <h1 class="font-extrabold text-xl">Design Process</h1>
+                        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+                 </div>
+                 <div class="card pastel lg:w-64 m-6 lg:m-24">
+                    <img class="pt-4 w-16 pl-4" src="assets/images/vision.png" alt="">
+                    <div class="card-body">
+                        <h1 class="font-extrabold text-xl">Supervision</h1>
+                        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+                 </div>
+                 <div class="card blue lg:w-64  m-6 lg:m-24">
+                    <img class="pt-4 w-16 pl-4" src="assets/images/budget-planning.png" alt="">
+                    <div class="card-body">
+                        <h1 class="font-extrabold text-xl">Budget Planning</h1>
+                        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+                 </div>
+              </div>
+          </section>
       </main>
       <!-- MAIN ENDS -->
       <!-- FOOTER STARTS -->
