Background image added

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             top: 12px;
         }
         .choose{
-            background-image: url('/assets/images/article3.png');
+            background-image: url('./assets/images/article3.png');
             width: 100%;
         }
        </style>
